Refactor stop signal handling in FileSystem and REST watchers; improve documentation and tests